LifeCounter [FIX] Change app title

--- a/AppJS/LifeCounter/index.html
+++ b/AppJS/LifeCounter/index.html
@@ -8,7 +8,7 @@
 	
 	<link rel="stylesheet" type="text/css" href="app.css"> 
 	
-	<title>App</title>
+	<title>LifeCounter</title>
 
 
 	<script type="text/javascript" src="app.min.js"></script>
