--- a/AppJS/LifeCounter/index.html
+++ b/AppJS/LifeCounter/index.html
@@ -6,8 +6,9 @@
 	<meta charset="UTF-8"> 
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
 
-	<link rel="icon" type="image/x-icon" href="favicon.ico" />
+	<!--link rel="icon" type="image/x-icon" href="favicon.ico" /-->
 	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
+	<link rel="icon" sizes="192x192" href="http://apps.wz.cz/counter/favicon.png">
 
 	<link rel="stylesheet" type="text/css" href="app.css"> 
 	<!--link rel="stylesheet" type="text/css" href="app.min.css"--> 
