LifeCounter [FEATURE] Improve minifaction

--- a/AppJS/LifeCounter/index.html
+++ b/AppJS/LifeCounter/index.html
@@ -52,7 +52,7 @@
 			for (var i = 0; i < app.context.numOfPlayers; i++) {
 				app.context.players.push(new Player());
 				app.context.players[i].score = app.context.initScore;
-				app.context.players[i].color = COLORS[app.context.colorSetup[i]];
+				app.context.players[i].color = Colors[app.context.colorSetup[i]];
 			}
 			
 			// Setup views
