LifeCounter [FEATURE] Modify code to allow easy localization

--- a/AppJS/LifeCounter/index.html
+++ b/AppJS/LifeCounter/index.html
@@ -21,6 +21,7 @@
 	<script type="text/javascript" src="src/dice.js"></script>
 	<script type="text/javascript" src="src/timer.js"></script>
 	<script type="text/javascript" src="src/settings.js"></script>
+	<script type="text/javascript" src="src/texts_en.js"></script>
 </head>
 
 <body onload="Init();" id="Core">
