--- a/AppJS/LifeCounter/index.html
+++ b/AppJS/LifeCounter/index.html
@@ -1,81 +1,1 @@
-<!DOCTYPE html>
-
-<html>
-
-<head>
-	<meta charset="UTF-8"> 
-	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=0">
-
-	<!--link rel="icon" type="image/x-icon" href="favicon.ico" /-->
-	<link rel='shortcut icon' type='image/x-icon' href='favicon.ico' />
-	<link rel="icon" sizes="192x192" href="http://apps.wz.cz/counter/favicon.png">
-
-	<link rel="stylesheet" type="text/css" href="app.css"> 
-	<!--link rel="stylesheet" type="text/css" href="app.min.css"--> 
-
-	<title>LifeCounter</title>
-
-	<!--script type="text/javascript" src="app.min.js"></script-->
-	<script type="text/javascript" src="src/helper.js"></script>
-	<script type="text/javascript" src="src/app.js"></script>
-	<script type="text/javascript" src="src/score.js"></script>
-	<script type="text/javascript" src="src/dice.js"></script>
-	<script type="text/javascript" src="src/timer.js"></script>
-	<script type="text/javascript" src="src/timer_settings.js"></script>
-	<script type="text/javascript" src="src/settings.js"></script>
-	<script type="text/javascript" src="src/texts_cz.js"></script>
-</head>
-
-<body onload="Init();" id="Core">
-	<div id="Canvas">Loading...</div>
-	<span style="visibility: hidden; position: absolute; top: -200px;" id="HiddenResizer"></span>
-	
-	<script type="text/javascript">
-		// Global variables
-		var app = new App();
-		
-		function Player () {
-			this.score = 0;
-			this.color = "red";
-		}
-		
-		// Bootstrap app
-		function Init() {
-			app.bootstrap('Canvas');
-			
-			// Setup app context
-			app.context['players'] = [];
-			app.context['initScore'] = 0;
-			app.context['numOfPlayers'] = 4;
-			app.context['colorSetup'] = [ 0, 1, 2, 3, 4, 5 ];
-			app.context['initCountdown'] = 30; // 30 seconds
-			app.context['countdown'] = 0;
-			app.context['cntIntHndl'] = null;
-			
-			for (var i = 0; i < app.context.numOfPlayers; i++) {
-				app.context.players.push(new Player());
-				app.context.players[i].score = app.context.initScore;
-				app.context.players[i].color = Colors[app.context.colorSetup[i]];
-			}
-			
-			// Setup views
-			var views = [
-				{ callback: RenderScore, name: "score" },
-				{ callback: RenderSettings, name: "settings" },
-				{ callback: RenderTimer, name: 'timer' },
-				{ callback: RenderTimerSettings, name: "timer_settings" },
-				{ callback: RenderDice, name: "dice" }
-			];
-			
-			for (var i = 0; i < views.length; i++) {
-				var view = new View();
-				view.render = views[i].callback;
-				app.addView(view, views[i].name);
-			}
-			
-			app.toggleView("score");
-		}
-	</script>
-</body>
-
-</html>
+<!DOCTYPE html><html><head><meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1,user-scalable=0"><link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/><link rel="icon" sizes="192x192" href="http://apps.wz.cz/counter/favicon.png"><link rel="stylesheet" href="app.min.css"><title>LifeCounter</title><script src="app.min.js"></script></head><body onload="Init()" id="Core"><div id="Canvas">Loading...</div><span style="visibility:hidden;position:absolute;top:-200px" id="HiddenResizer"></span><script>function Player(){this.score=0,this.color="red"}function Init(){app.bootstrap("Canvas"),app.context.players=[],app.context.initScore=0,app.context.numOfPlayers=4,app.context.colorSetup=[0,1,2,3,4,5],app.context.initCountdown=30,app.context.countdown=0,app.context.cntIntHndl=null;for(t=0;t<app.context.numOfPlayers;t++)app.context.players.push(new Player),app.context.players[t].score=app.context.initScore,app.context.players[t].color=Colors[app.context.colorSetup[t]];for(var e=[{callback:RenderScore,name:"score"},{callback:RenderSettings,name:"settings"},{callback:RenderTimer,name:"timer"},{callback:RenderTimerSettings,name:"timer_settings"},{callback:RenderDice,name:"dice"}],t=0;t<e.length;t++){var n=new View;n.render=e[t].callback,app.addView(n,e[t].name)}app.toggleView("score")}var app=new App</script></body></html>
