--- a/AppJS/LifeCounter/index.core.html
+++ b/AppJS/LifeCounter/index.core.html
@@ -18,6 +18,7 @@
 	<!--script type="text/javascript" src="app.min.js"></script-->
 	<script type="text/javascript" src="src/helper.js"></script>
 	<script type="text/javascript" src="src/app.js"></script>
+	<script type="text/javascript" src="src/template.js"></script>
 	<script type="text/javascript" src="src/score.js"></script>
 	<script type="text/javascript" src="src/dice.js"></script>
 	<script type="text/javascript" src="src/timer.js"></script>
