--- a/Libraries/LevelD/_Bindings/EcmaScript6/tests/SpecRunner.html
+++ b/Libraries/LevelD/_Bindings/EcmaScript6/tests/SpecRunner.html
@@ -16,6 +16,7 @@
 
   <!-- include spec files here... -->
   <script src="spec/BytestreamInSpec.js"></script>
+  <script src="spec/BytestreamOutSpec.js"></script>
 
 </head>
 
