--- a/Libraries/LevelD/_Bindings/EcmaScript6/tests/SpecRunner.html
+++ b/Libraries/LevelD/_Bindings/EcmaScript6/tests/SpecRunner.html
@@ -17,6 +17,7 @@
   <!-- include spec files here... -->
   <script src="spec/BytestreamInSpec.js"></script>
   <script src="spec/BytestreamOutSpec.js"></script>
+  <script src="spec/LeveldSpec.js"></script>
 
 </head>
 
